--- a/mboaeat-shared/pom.xml
+++ b/mboaeat-shared/pom.xml
@@ -47,6 +47,7 @@
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
