--- a/customer-api/src/main/resources/application.properties
+++ b/customer-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=account-service
+spring.application.name=customer-service
 spring.cloud.consul.discovery.instance-id=${spring.application.name}.${random.uuid}
 spring.cloud.consul.discovery.register-health-check=true
 spring.cloud.loadbalancer.ribbon.enabled=false
