--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -34,11 +34,11 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      SCRIPT_NAME:  /pgadmin4
+      #SCRIPT_NAME:  /pgadmin4
     volumes:
       - pgadmin:/root/.pgadmin
     ports:
-      - "80:8081"
+      - "80:80"
     networks:
       postgres-net:
         aliases:
