--- a/order-api/pom.xml
+++ b/order-api/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>mboaeat-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-java8</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
