--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,18 @@ services:
       postgres-net:
           aliases:
             - postgres
+  order-api:
+    image: mboaeat/order-api
+    environment:
+      - spring.cloud.consul.host=consul-node1
+      - spring.datasource.url=jdbc:postgresql://postgres:5432/mboa
+    networks:
+      mboa-network:
+        aliases:
+          - order-api-net
+      postgres-net:
+        aliases:
+          - postgres
 
   gateway-service:
     image: mboaeat/gateway-service
