--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -34,7 +34,7 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      #SCRIPT_NAME:  /pgadmin4
+      #SCRIPT_NAME:  /pgadmin4 2z7rICEOwlcrhaKv Ee6mSPwjG85W
     volumes:
       - pgadmin:/root/.pgadmin
     ports:
