--- a/mboaeat-common/pom.xml
+++ b/mboaeat-common/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <commons.validator.version>1.6</commons.validator.version>
+        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
     </properties>
 
     <dependencies>
