--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -4,13 +4,10 @@ services:
   postgres:
     container_name: postgres_container
     image: postgres:11.4
-    deploy:
-      resources:
-        limits:
-          memory: 1500m
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
+      POSTGRES_DB: ${POSTGRES_DB:-mboaeat_db}
       PGDATA: /user/local/postgres_data
     command: postgres -c max_connections=300 -c log_min_messages=LOG
     volumes:
@@ -27,10 +24,6 @@ services:
   pgadmin:
     container_name: pgadmin_container
     image: dpage/pgadmin4
-    deploy:
-      resources:
-        limits:
-          memory: 1500m
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
@@ -46,7 +39,7 @@ services:
 
 networks:
   postgres-net:
-    external: true
+    name: postgres-net
 
 
 volumes:
