--- a/pom.xml
+++ b/pom.xml
@@ -15,19 +15,29 @@
   
   	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+		<spring-cloud.version>Hoxton.SR6</spring-cloud.version>
 		<logstash.version>4.11</logstash.version>
 		<testcontainers.version>1.48</testcontainers.version>
 		<springdoc.version>1.1.49</springdoc.version>
 		<embedded-consul.version>2.1.4</embedded-consul.version>
 		<awaitility.version>1.7.0</awaitility.version>
 		<junit-jupiter.version>5.3.2</junit-jupiter.version>
+		<micrometer.version>1.3.10</micrometer.version>
+		<micrometer-core.version>1.5.2</micrometer-core.version>
+
+		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
+
+		<docker.image.prefix>mboaeat</docker.image.prefix>
+		<docker.image.exposed.port>9090</docker.image.exposed.port>
+		<docker.image.dockerfile.dir>${basedir}</docker.image.dockerfile.dir>
+		<docker.image.dockerize.version>v0.6.1</docker.image.dockerize.version>
+		<docker.plugin.version>1.2.0</docker.plugin.version>
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.6.RELEASE</version>
+		<version>2.3.1.RELEASE</version>
         <relativePath/>
 	</parent>
 
@@ -51,6 +61,13 @@
 				<groupId>org.springframework.session</groupId>
 				<artifactId>spring-session-bom</artifactId>
 				<version>Corn-SR2</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.projectreactor</groupId>
+				<artifactId>reactor-bom</artifactId>
+				<version>Dysprosium-SR10</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -113,5 +130,173 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<profiles>
+		<profile>
+			<id>springboot</id>
+			<activation>
+				<file>
+					<!-- Just a way to identify a Spring Boot application -->
+					<exists>src/main/resources/bootstrap.yml</exists>
+				</file>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+							<fork>true</fork>
+							<!-- Layered jars optimizes Docker images -->
+							<layers>
+								<enabled>true</enabled>
+							</layers>
+						</configuration>
+						<executions>
+							<execution>
+								<!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties file is present -->
+								<goals>
+									<goal>build-info</goal>
+								</goals>
+								<configuration>
+									<additionalProperties>
+										<encoding.source>${project.build.sourceEncoding}</encoding.source>
+										<encoding.reporting>${project.reporting.outputEncoding}</encoding.reporting>
+										<java.source>${maven.compiler.source}</java.source>
+										<java.target>${maven.compiler.target}</java.target>
+									</additionalProperties>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
+					<!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties file is present -->
+					<plugin>
+						<groupId>pl.project13.maven</groupId>
+						<artifactId>git-commit-id-plugin</artifactId>
+						<executions>
+							<execution>
+								<goals>
+									<goal>revision</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<verbose>true</verbose>
+							<dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
+							<generateGitPropertiesFile>true</generateGitPropertiesFile>
+							<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
+							</generateGitPropertiesFilename>
+							<failOnNoGitDirectory>false</failOnNoGitDirectory>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+
+		</profile>
+
+		<profile>
+			<id>buildDocker-local</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>com.spotify</groupId>
+							<artifactId>docker-maven-plugin</artifactId>
+							<version>${docker.plugin.version}</version>
+							<executions>
+								<execution>
+									<phase>install</phase>
+									<goals>
+										<goal>build</goal>
+									</goals>
+								</execution>
+							</executions>
+							<configuration>
+								<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+								<dockerDirectory>${docker.image.dockerfile.dir}</dockerDirectory>
+								<resources>
+									<resource>
+										<targetPath>/</targetPath>
+										<directory>${project.build.directory}</directory>
+										<include>${project.build.finalName}.jar</include>
+									</resource>
+								</resources>
+								<buildArgs>
+									<ARTIFACT_NAME>${project.build.finalName}</ARTIFACT_NAME>
+									<EXPOSED_PORT>${docker.image.exposed.port}</EXPOSED_PORT>
+									<DOCKERIZE_VERSION>${docker.image.dockerize.version}</DOCKERIZE_VERSION>
+								</buildArgs>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+
+
+		<profile>
+			<id>buildDocker</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>com.spotify</groupId>
+							<artifactId>docker-maven-plugin</artifactId>
+							<version>${docker.plugin.version}</version>
+							<executions>
+								<execution>
+									<phase>install</phase>
+									<goals>
+										<goal>build</goal>
+									</goals>
+								</execution>
+							</executions>
+							<configuration>
+								<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+								<dockerDirectory>${docker.image.dockerfile.dir}</dockerDirectory>
+								<serverId>docker-hub</serverId>
+								<registryUrl>https://index.docker.io/v1/</registryUrl>
+								<resources>
+									<resource>
+										<targetPath>/</targetPath>
+										<directory>${project.build.directory}</directory>
+										<include>${project.build.finalName}.jar</include>
+									</resource>
+								</resources>
+								<buildArgs>
+									<ARTIFACT_NAME>${project.build.finalName}</ARTIFACT_NAME>
+									<EXPOSED_PORT>${docker.image.exposed.port}</EXPOSED_PORT>
+									<DOCKERIZE_VERSION>${docker.image.dockerize.version}</DOCKERIZE_VERSION>
+								</buildArgs>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
+
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 
 </project>
