--- a/mboaeat-common/pom.xml
+++ b/mboaeat-common/pom.xml
@@ -18,6 +18,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.mboaeat</groupId>
+            <artifactId>mboaeat-shared</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
