--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -4,11 +4,10 @@ server.port=0
 
 ##Datasource
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mboa
+spring.datasource.url=jdbc:postgresql://localhost:5432/mboaeat_db
 spring.datasource.username=postgres
 spring.datasource.password=changeme
 spring.datasource.tomcat.test-on-borrow=true
 spring.datasource.tomcat.validation-query=SELECT 1;
 spring.datasource.tomcat.test-on-connect=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-spring.datasource.schema=
