--- a/gateway-service/src/main/resources/application.yaml
+++ b/gateway-service/src/main/resources/application.yaml
@@ -13,14 +13,14 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
-      #globalcors:
-      #  cors-configurations:
-      #    '[/**]':
-      #      allowedOrigins: '*'
-      #      allowedMethods:
-      #        - GET
-      #        - POST
-      #        - PUT
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: '*'
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
       routes:
         - id: account
           uri: lb://account-service/
